--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kvadrat74/html-parser",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "main": "index.js",
   "types": "index.d.ts",
   "napi": {
@@ -36,11 +36,5 @@
     "universal": "napi universal",
     "version": "napi version"
   },
-  "packageManager": "yarn@4.3.1",
-  "optionalDependencies": {
-    "@kvadrat74/html-parser-win32-x64-msvc": "0.0.1",
-    "@kvadrat74/html-parser-darwin-x64": "0.0.1",
-    "@kvadrat74/html-parser-linux-x64-gnu": "0.0.1",
-    "@kvadrat74/html-parser-darwin-arm64": "0.0.1"
-  }
+  "packageManager": "yarn@4.3.1"
 }
