--- a/package.json
+++ b/package.json
@@ -36,5 +36,11 @@
     "universal": "napi universal",
     "version": "napi version"
   },
-  "packageManager": "yarn@4.3.1"
+  "packageManager": "yarn@4.3.1",
+  "optionalDependencies": {
+    "@kvadrat74/html-parser-win32-x64-msvc": "0.0.8",
+    "@kvadrat74/html-parser-darwin-x64": "0.0.8",
+    "@kvadrat74/html-parser-linux-x64-gnu": "0.0.8",
+    "@kvadrat74/html-parser-darwin-arm64": "0.0.8"
+  }
 }
