--- a/npm/android-arm64/package.json
+++ b/npm/android-arm64/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@kvadrat74/html-parser-darwin-arm64",
+  "name": "@kvadrat74/html-parser-android-arm64",
   "version": "0.0.0",
   "os": [
-    "darwin"
+    "android"
   ],
   "cpu": [
     "arm64"
   ],
-  "main": "html-parser.darwin-arm64.node",
+  "main": "html-parser.android-arm64.node",
   "files": [
-    "html-parser.darwin-arm64.node"
+    "html-parser.android-arm64.node"
   ],
   "license": "MIT",
   "engines": {
