--- a/npm/freebsd-x64/package.json
+++ b/npm/freebsd-x64/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@kvadrat74/html-parser-darwin-x64",
+  "name": "@kvadrat74/html-parser-freebsd-x64",
   "version": "0.0.0",
   "os": [
-    "darwin"
+    "freebsd"
   ],
   "cpu": [
     "x64"
   ],
-  "main": "html-parser.darwin-x64.node",
+  "main": "html-parser.freebsd-x64.node",
   "files": [
-    "html-parser.darwin-x64.node"
+    "html-parser.freebsd-x64.node"
   ],
   "license": "MIT",
   "engines": {
