--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
   "name": "@kvadrat74/html-parser",
-  "version": "0.0.8",
+  "version": "0.1.0",
   "main": "index.js",
   "types": "index.d.ts",
   "napi": {
     "name": "html-parser",
     "triples": {
       "additional": [
-        "aarch64-apple-darwin"
+        "aarch64-apple-darwin",
+        "aarch64-linux-android",
+        "aarch64-unknown-linux-gnu",
+        "aarch64-unknown-linux-musl",
+        "aarch64-pc-windows-msvc",
+        "armv7-unknown-linux-gnueabihf",
+        "armv7-unknown-linux-musleabihf",
+        "x86_64-unknown-linux-musl",
+        "x86_64-unknown-freebsd",
+        "i686-pc-windows-msvc",
+        "armv7-linux-androideabi",
+        "universal-apple-darwin",
+        "riscv64gc-unknown-linux-gnu"
       ]
     }
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kvadrat174/html-parser.git"
-  },
-  "author": "Andrey Osokin <andrey.osokin74@gmail.com>",
   "license": "MIT",
   "devDependencies": {
     "@napi-rs/cli": "^2.18.4",
@@ -36,11 +43,5 @@
     "universal": "napi universal",
     "version": "napi version"
   },
-  "packageManager": "yarn@4.3.1",
-  "optionalDependencies": {
-    "@kvadrat74/html-parser-win32-x64-msvc": "0.0.8",
-    "@kvadrat74/html-parser-darwin-x64": "0.0.8",
-    "@kvadrat74/html-parser-linux-x64-gnu": "0.0.8",
-    "@kvadrat74/html-parser-darwin-arm64": "0.0.8"
-  }
+  "packageManager": "yarn@4.3.1"
 }
