--- a/package.json
+++ b/package.json
@@ -1,27 +1,11 @@
 {
   "name": "@kvadrat74/html-parser",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "index.js",
   "types": "index.d.ts",
   "napi": {
     "name": "html-parser",
-    "triples": {
-      "additional": [
-        "aarch64-apple-darwin",
-        "aarch64-linux-android",
-        "aarch64-unknown-linux-gnu",
-        "aarch64-unknown-linux-musl",
-        "aarch64-pc-windows-msvc",
-        "armv7-unknown-linux-gnueabihf",
-        "armv7-unknown-linux-musleabihf",
-        "x86_64-unknown-linux-musl",
-        "x86_64-unknown-freebsd",
-        "i686-pc-windows-msvc",
-        "armv7-linux-androideabi",
-        "universal-apple-darwin",
-        "riscv64gc-unknown-linux-gnu"
-      ]
-    }
+    "triples": {}
   },
   "license": "MIT",
   "devDependencies": {
@@ -43,5 +27,10 @@
     "universal": "napi universal",
     "version": "napi version"
   },
-  "packageManager": "yarn@4.3.1"
+  "packageManager": "yarn@4.3.1",
+  "optionalDependencies": {
+    "@kvadrat74/html-parser-win32-x64-msvc": "0.2.0",
+    "@kvadrat74/html-parser-darwin-x64": "0.2.0",
+    "@kvadrat74/html-parser-linux-x64-gnu": "0.2.0"
+  }
 }
