--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "universal": "napi universal",
     "version": "napi version"
   },
-  "packageManager": "yarn@4.3.1"
+  "packageManager": "yarn@4.3.1",
+  "optionalDependencies": {
+    "@kvadrat74/html-parser-win32-x64-msvc": "0.2.2",
+    "@kvadrat74/html-parser-darwin-x64": "0.2.2",
+    "@kvadrat74/html-parser-linux-x64-gnu": "0.2.2"
+  }
 }
