--- a/npm/darwin-arm64/package.json
+++ b/npm/darwin-arm64/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "@kvadrat74/html-parser-darwin-x64",
+  "name": "@kvadrat74/html-parser-darwin-arm64",
   "version": "0.0.0",
   "os": [
     "darwin"
   ],
   "cpu": [
-    "x64"
+    "arm64"
   ],
-  "main": "html-parser.darwin-x64.node",
+  "main": "html-parser.darwin-arm64.node",
   "files": [
-    "html-parser.darwin-x64.node"
+    "html-parser.darwin-arm64.node"
   ],
   "license": "MIT",
   "engines": {
