--- a/package.json
+++ b/package.json
@@ -5,14 +5,22 @@
   "types": "index.d.ts",
   "napi": {
     "name": "html-parser",
-    "triples": {}
-  },
-  "repository": {
-    "url": "git+https://github.com/kvadrat174/html-parser.git"
-  },
-  "author": {
-    "name": "a.osokin",
-    "email": "andrey.osokin74@gmail.com"
+    "triples": {
+      "defaults": false,
+      "additional": [
+        "aarch64-apple-darwin",
+        "aarch64-linux-android",
+        "aarch64-unknown-linux-gnu",
+        "aarch64-unknown-linux-musl",
+        "aarch64-pc-windows-msvc",
+        "armv7-unknown-linux-gnueabihf",
+        "armv7-unknown-linux-musleabihf",
+        "x86_64-apple-darwin",
+        "x86_64-pc-windows-msvc",
+        "armv7-linux-androideabi",
+        "universal-apple-darwin"
+      ]
+    }
   },
   "license": "MIT",
   "devDependencies": {
@@ -34,10 +42,5 @@
     "universal": "napi universal",
     "version": "napi version"
   },
-  "packageManager": "yarn@4.3.1",
-  "optionalDependencies": {
-    "@kvadrat74/html-parser-darwin-x64": "0.2.7",
-    "@kvadrat74/html-parser-linux-x64-gnu": "0.2.7",
-    "@kvadrat74/html-parser-win32-x64-msvc": "0.2.7"
-  }
+  "packageManager": "yarn@4.3.1"
 }
