--- a/npm/win32-arm64-msvc/package.json
+++ b/npm/win32-arm64-msvc/package.json
@@ -11,6 +11,9 @@
   "files": [
     "html-parser.win32-arm64-msvc.node"
   ],
+  "repository": {
+    "url": "git+https://github.com/kvadrat174/html-parser.git"
+  },
   "license": "MIT",
   "engines": {
     "node": ">= 10"
